## Change history

[2019/05/08]
* Deleted a few unnecessary checks when adding an entity to a block, this will improve the process of adding entities to a document and reading a DXF file.
* Updated the StringEnum class to use generics.
* Updated the HeaderVariable class to avoid direct access to the known header variables, they must be modified through its properties.
* (fixed) Error when combining open LwPolylines or Polylines with other entities to create a HatchBoundaryPath.

[2019/04/14]
* Now it is possible to manually add custom header variables to the drawing. When a DXF is loaded all unrecognized header variables will be automatically added as custom header variables to the drawing.
* Added several methods to the DrawingVariables class to handle custom header variables.
* Deleted the ExtMax and ExtMin properties from the DrawingVariables class, since those values are not calculated. It is still possible to access them as a custom header variable if the loaded DXF contains them. See sample AddHeaderVariable().

[2019/04/07]
* Added Width property to Text entity it is only applicable if the Alignment is Fit or Aligned.
* Added MirrText DrawingVariable to the document, it controls whether the text will be mirrored or not when a symmetry is performed.
* Added the static property DefaultMirrText to the Text and MText entity. It is the equivalent MirrText DrawingVariable used when the entity does not belong to a DxfDocument.
* Added the static property DefaultInsUnits to the Insert entity. It is the equivalent InsUnits DrawingVariable used when the entity does not belong to a DxfDocument.
* (fixed) The Text Alignment Fit and Aligned should work properly.

* Implemented TransformBy method for Viewport entities.
* Added two new constructors to Viewport class to create rectangular viewports.
* The Viewport will show the grid by default.
* When a Leader is removed from a document, the annotation, if exists, will also be removed; although AutoCad does not.